--- a/todo-webapp/package.json
+++ b/todo-webapp/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "nwhacks-webapp",
+  "name": "todo-webapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "prop-types": "^15.6.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
