--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^0.27.0",
     "material-ui": "^0.20.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "prop-types": "^15.6.0",
-    "react-scripts": "1.0.17"
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "1.0.17",
+    "recompose": "^0.26.0"
   },
   "scripts": {
     "start": "react-scripts start",
