--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "google-map-react": "^0.27.0",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
